--- a/index.html
+++ b/index.html
@@ -4,119 +4,118 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GroupPojectBeta</title>
+    <title>Cara's icecream</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/css/lightbox.min.css">
+    <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <div class="carousel slide" data-ride="carousel" id="carousel-1">
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <div class="jumbotron hero-nature carousel-hero">
-                    <h1 class="hero-title">Hero Nature</h1>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="jumbotron hero-photography carousel-hero">
-                    <h1 class="hero-title">Hero Photography</h1>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                </div>
-            </div>
-            <div class="item">
-                <div class="jumbotron hero-technology carousel-hero">
-                    <h1 class="hero-title">Hero Technology</h1>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                </div>
-            </div>
-        </div>
-        <div><a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a>
-            <a class="right carousel-control" href="#carousel-1" role="button" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a>
-        </div>
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-1" data-slide-to="1"></li>
-            <li data-target="#carousel-1" data-slide-to="2"></li>
-        </ol>
-    </div>
-    <div id="navbarColor" class="container-fluid main-header-text">
-        <nav class="navbar navbar-inverse navbar-static-top nav-main-wrapper">
-            <div class="container-fluid">
-                <div class="navbar-header"><a class="navbar-brand visible-xs-block navbar-link" href="#">MENU </a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                </div>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active" role="presentation"><a href="#">Home </a></li>
-                        <li role="presentation"><a href="#">About </a></li>
-                        <li role="presentation"><a href="#">Get Mixing</a></li>
-                        <li role="presentation"><a href="#">Ingredients </a></li>
-                        <li role="presentation"><a href="#">Contact </a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <div class="article-list">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Lets get Mixing</h2></div>
-            <div class="row articles">
-                <div class="col-md-4 col-sm-6 item">
-                    <a href="#"><img class="img-responsive threeImage" src="assets/img/iceShotOnTray.jpg"></a>
-                    <h3 class="name">View all the drinks</h3><a href="#" class="action"><i class="fa fa-gittip"></i></a></div>
-                <div class="col-md-4 col-sm-6 item">
-                    <a href="#"><img class="img-responsive threeImage" src="assets/img/navDisplay.jpg"></a>
-                    <h3 class="name">Mix with ingridents</h3><a href="#" class="action"><i class="glyphicon glyphicon-filter"></i></a></div>
-                <div class="col-md-4 col-sm-6 item">
-                    <a href="#"><img class="img-responsive threeImage" src="assets/img/winterWarm.jpg"></a>
-                    <h3 class="name">Types of Drink</h3><a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a></div>
+            <div class="navbar-header">
+                <a class="navbar-brand navbar-link" href="#" id="name"><img src="assets/img/icecream-2561451_960_720.png" id="logo"> <strong>Cara's</strong> Icecream shop</a>
+                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            </div>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active" role="presentation"><a href="#">Icecream Flavor</a></li>
+                    <li role="presentation"><a href="#">Pricing </a></li>
+                    <li role="presentation"><a href="#">Order </a></li>
+                    <li role="presentation"><a href="#">Contacts </a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="promo">
+        <div class="jumbotron">
+            <h1> Chill Day</h1>
+            <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p><a class="btn btn-primary btn-lg" role="button" href="#">Learn more</a></p>
+        </div>
+    </div>
+    <div class="container site-section" id="welcome">
+        <h1>Welcome to Cara's Icecream Shop</h1>
+        <p>Lucas ipsum dolor sit amet amidala qui-gonn yavin darth watto bespin organa moff moff aayla. Solo moff coruscant grievous skywalker. Luke cade ewok boba thrawn obi-wan. Luke wampa biggs thrawn darth skywalker anakin. Fett jango luuke organa skywalker
+            obi-wan palpatine yoda. Solo mothma skywalker darth kessel chewbacca binks. Obi-wan moff windu antilles yavin dagobah lando fett hutt. Coruscant jade antilles mandalore mandalorians organa antilles. Kamino sidious maul darth hutt alderaan
+            sith sith.&nbsp;Paragraph</p>
+    </div>
+    <div class="dark-section">
+        <div class="container site-section" id="why">
+            <h1>Why Choose Us</h1>
+            <div class="row">
+                <div class="col-md-4 item"><i class="icon ion-icecream"></i>
+                    <h2>Great Taste</h2>
+                    <p>Darth mandalorians. Moff yoda solo organa. Yoda kessel obi-wan tusken raider. Ewok yoda palpatine mace solo .&nbsp; </p>
+                </div>
+                <div class="col-md-4 item"><i class="icon ion-home"></i>
+                    <h2>Healthy </h2>
+                    <p>Darth mandalorians. Moff yoda solo organa. Yoda kessel obi-wan tusken raider. Ewok yoda palpatine mace solo .&nbsp; </p>
+                </div>
+                <div class="col-md-4 item"><i class="icon ion-heart"></i>
+                    <h2>Organic </h2>
+                    <p>Darth mandalorians. Moff yoda solo organa. Yoda kessel obi-wan tusken raider. Ewok yoda palpatine mace solo .&nbsp; </p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="footer-dark">
-        <footer id="footerArea">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-md-push-6 item text">
-                        <h3>Company Name</h3>
-                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
-                    </div>
-                    <div class="col-md-3 col-md-pull-6 col-sm-4 item">
-                        <h3>Services</h3>
-                        <ul>
-                            <li><a href="#">Web design</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Hosting</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 col-md-pull-6 col-sm-4 item">
-                        <h3>About</h3>
-                        <ul>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
-                            <li><a href="#">Careers</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-12 col-sm-4 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+    <div class="container site-section" id="welcome">
+        <h1>Gallary </h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <a href="assets/img/ice-564944_960_720.jpg" target="_blank" data-lightbox="cakes"><img class="img-responsive" src="assets/img/ice-564944_960_720.jpg"></a>
                 </div>
-                <p class="copyright">Company Name © 2016</p>
             </div>
-        </footer>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <a href="assets/img/ice-cream-cone-1579124_1920.jpg" target="_blank" data-lightbox="cakes"><img class="img-responsive" src="assets/img/ice-cream-cone-1579124_1920.jpg"></a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <a href="assets/img/ice-1209237_960_720.jpg" target="_blank" data-lightbox="cakes"><img class="img-responsive" src="assets/img/ice-1209237_960_720.jpg"></a>
+                </div>
+            </div>
+        </div>
     </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6 footer-navigation">
+                    <h3><a href="#">Cara's Icecream</a></h3>
+                    <p class="links"><a href="#">Icecream </a><strong>·  </strong><a href="#">About</a><strong> </strong></p>
+                    <p class="company-name">Cara's Icecream © 2017 </p>
+                </div>
+                <div class="col-md-4 col-sm-6 footer-contacts">
+                    <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
+                        <p><span class="new-line-span">34 ChiillStreet</span>North ,Pole,</p>
+                    </div>
+                    <div><i class="fa fa-phone footer-contacts-icon"></i>
+                        <p class="footer-center-info email text-left">+1-999-9999 </p>
+                    </div>
+                    <div><i class="fa fa-envelope footer-contacts-icon"></i>
+                        <p> <a href="#" target="_blank">ice@icecream.com</a></p>
+                    </div>
+                </div>
+                <div class="clearfix visible-sm-block"></div>
+                <div class="col-md-4 footer-about">
+                    <h4>About the company</h4>
+                    <p> Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+                    </p>
+                    <div class="social-links social-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-github"></i></a></div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 </html>
